Menambahkan tampilan halaman Hours dan Contact

--- a/Taco/contact.html
+++ b/Taco/contact.html
@@ -2,11 +2,121 @@
 <html lang="en">
 
 <head>
-
+    <meta charset="UTF-8">
+    <meta name="description" content="Taco">
+    <meta name="keywords" content="HTML, CSS, JavaScript">
+    <meta name="author" content="jihannhayaa">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Little Taco Shop Contact</title>
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
+    <header>
+        <h1>
+            Little Taco Shop Hours
+        </h1>
+        <nav>
+            <ul>
+                <li>
+                    <a href="index.html">
+                        Home
+                    </a>
+                </li>
+                <li>
+                    <a href="index.html#about">
+                        About LTS
+                    </a>
+                </li>
+                <li>
+                    <a href="index.html#menu">
+                        Our Menu
+                    </a>
+                </li>
+                <li>
+                    <a href="hours.html">
+                        Store Hours
+                    </a>
+                </li>
+            </ul>
+        </nav>
+        <figure>
+            <img src="img/tacos_close_up_400x260.png" alt="Tacos Close Up">
+            <figcaption>
+                Little Taco Shop Tacos
+            </figcaption>
+        </figure>
+    </header>
 
+    <main>
+        <section>
+            <h2>
+                Our Contact Form
+            </h2>
+            <form action="#">
+                <fieldset>
+                    <legend>Send Us A Message</legend>
+                    <div>
+                        <label for="name">
+                            Name:
+                        </label>
+                        <input type="text" name="name" id="name" value="" placeholder="your name">
+                        <br><br>
+                    </div>
+                    <div>
+                        <label for="email">
+                            Email:
+                        </label>
+                        <input type="email" name="email" id="email" value="" placeholder="your email">
+                        <br><br>
+                    </div>
+                    <div>
+                        <label for="message">
+                            Your Message:
+                        </label><br>
+                        <textarea name="message" id="message" value="" rows="8" cols="30" placeholder="Type your message here">
+                        </textarea>
+                    </div>
+                </fieldset>
+                <div>
+                    <button type="submit">
+                        Send
+                    </button>
+                    <button type="reset">
+                        Reset
+                    </button>
+                </div>
+            </form>
+        </section>
+
+        <section>
+            <h2>
+                Our Location
+            </h2>
+            <address>
+                555 Taco Temptation Lane, Suite T
+                <br>
+                Kansas City, MO 55555-5555
+                <p>
+                    Phone: 
+                    <a href="tel:+5555555555">
+                        555-555-5555
+                    </a>
+                </p>
+            </address>
+            <a href="contact.html">
+                Back To Top
+            </a>
+        </section>
+        <hr>
+    </main>
+
+    <footer>
+        <p>
+            Copyright &copy; The Little Taco Shop
+        </p>
+    </footer>
 </body>
 
 </html>
