--- a/Taco/index.html
+++ b/Taco/index.html
@@ -7,7 +7,7 @@
         <meta name="keywords" content="HTML, CSSS, JavaScript">
         <meta name="author" content="jihannhayaa">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Taco Enak</title>
+        <title>Little Taco Shop</title>
         <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
         <link rel="stylesheet" href="css/style.css">
     </head>
@@ -49,6 +49,7 @@
                     Tacos and a Drink
                 </figcaption>
             </figure>
+            <hr>
         </header>
 
         <main>
@@ -57,7 +58,7 @@
                     About LTS
                 </h2>
                 <p>
-                    LTS was founded in 2022. Our shop was built from a love of tacos 🌮🌮🌮. We hope our shop adds a unique and interesting place to our little town.
+                    LTS was founded in 2022. Our shop was built from a <b>love of tacos</b> 🌮🌮🌮. We hope our shop adds a unique and interesting place to our little town.
                 </p>
                 <aside>
                     <h3>
@@ -83,6 +84,7 @@
                     </details>
                 </aside>
             </section>
+            <hr>
 
             <section id="menu">
                 <h2>
@@ -168,17 +170,15 @@
                     </tr>
                 </table>
             </section>
-
             <br>
-            <p>
-                <a href="index.html">
-                    Back To Top
-                </a>
-            </p>
+            <a href="index.html">
+                Back To Top
+            </a>
+            <hr>
         </main>
 
         <footer>
-            <p>Copyright &copy The Little Taco Shop</p>
+            <p>Copyright &copy; The Little Taco Shop</p>
         </footer>
     </body>
 
